--- a/about.css
+++ b/about.css
@@ -1,4 +1,5 @@
 * {
+  font-family: "Montserrat", sans-serif;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -343,6 +344,7 @@
   display: flex;
   justify-content: space-between;
 }
+
 .footer {
   background-color: #1d1d1d;
   color: white;
@@ -382,6 +384,7 @@ footer div h4:after {
 .footer-search ul li {
   list-style-type: none;
   padding: 5px 0;
+  margin: 0;
 }
 
 .footer-site-map ul li:first-child,
