--- a/blog_grid.css
+++ b/blog_grid.css
@@ -1,232 +1,292 @@
-*{
-    box-sizing: border-box;
-    font-family: "Montserrat", sans-serif;
-    margin: 0;
-    padding: 0;
+* {
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
-
-
 /* Pjesa e headerit */
-      .wrapper {
-                max-width: 1200px;
-                margin: 0 auto;
-        }
-  
-      .header,
-      .navbar {
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-        }
-  
-       .header {
-                padding: 10px 0;
-        }
-  
-        .dropdown .dropdown__main a {
-                font-size: 14px;
-                text-decoration: none;
-                padding: 33px 20px;
-                color: black;
-                background-color: rgba(255, 255, 255, 0.5);
-        }
-  
-         .dropdown-content {
-                display: none;
-                position: absolute;
-                margin-top: 33px;
-                min-width: 160px;
-                background-color: rgba(255, 255, 255, 0.7);
-                box-shadow: 0px 3px 5px -1px #ccc;
-                z-index: 1;
-        }
-  
-        .dropdown-content a {
-                display: block;
-                padding: 12px 16px;
-                color: black;
-                text-decoration: none;
-                text-align: left;
-                font-size: 12px;
-        }
-  
-        .dropdown:hover .dropdown-content {
-                display: block;
-        }
-  
-        .dropdown__main a:hover,
-        .dropdown-content a:hover {
-                color: rgb(73, 62, 224);
-        }
+.wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
+}
 
+.header,
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
+.header {
+  padding: 10px 0;
+}
+
+.dropdown .dropdown__main a {
+  font-size: 14px;
+  text-decoration: none;
+  padding: 33px 20px;
+  color: black;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  margin-top: 33px;
+  min-width: 160px;
+  background-color: rgba(255, 255, 255, 0.7);
+  box-shadow: 0px 3px 5px -1px #ccc;
+  z-index: 1;
+}
+
+.dropdown-content a {
+  display: block;
+  padding: 12px 16px;
+  color: black;
+  text-decoration: none;
+  text-align: left;
+  font-size: 12px;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown__main a:hover,
+.dropdown-content a:hover {
+  color: rgb(73, 62, 224);
+}
 
 /* Pjesa e prezantimit te faqes Blog Grid      */
 
-.nalt{
-	 text-align: center;
-         font-size: 50px;
-         height: 100px;
-         font-weight: normal;
-         text-shadow: -4px 20px 0px rgba(255,255,255,0.19);
-	 color: white;
-	 font-family: palatino;
-         display: flex;
-         align-items: center;
-         justify-content: center;
-
+.nalt {
+  text-align: center;
+  font-size: 50px;
+  height: 100px;
+  font-weight: normal;
+  text-shadow: -4px 20px 0px rgba(255, 255, 255, 0.19);
+  color: white;
+  font-family: palatino;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.posht{
-	
-	 letter-spacing: 12px;
-         font-size: 17px;
-         color: white;
-	 vertical-align: text-top;
-	 text-align: center;
-	 height: 100px;
-	 font-family: garamond;
-	 font-weight: normal;
+.posht {
+  letter-spacing: 12px;
+  font-size: 17px;
+  color: white;
+  vertical-align: text-top;
+  text-align: center;
+  height: 100px;
+  font-family: garamond;
+  font-weight: normal;
 }
 
-       
 /* Fillimi i nje pjese te re, artikullit,  */
 
-
 .article-heading {
-            position: relative;
-            text-transform: uppercase;
-            display: inline-block;
-            font-size: 16px;
-            font-weight: 600;
-            color: #fff;
-            line-height: 130%;
-            background: #bda87f;
-            letter-spacing: 1.5px;
-            padding: 10px 15px;
-            margin-bottom: 20px;
-        }
-   
-.article-heading:after {
-            content: "";
-            position: absolute;
-            display: block;
-            border-bottom: 2px solid #bda87f;
-            width: 590px;
-            margin-left: -590px;
-            margin-top: -7px;
-            padding-top: 15px;
-        }
-        
-.article-title{
-    
-            text-shadow: -1px -1px gray, -1px 1px white, 2px -1px white, -2px -2px white;
-            font-size: 3em;
-            padding: 30px 0;
-            font-family: Montserrat;
-            font-family: Montserrat;
-            font-weight: bold;
-           
-            }
-          
-
-
-
-
-/* Dizajni per permbajtjen brenda, kurse dizajnin e vet box e kemi ba ne <head> */
-      
-.Emri_box{
-    font-family: sans-serif;
-    font-size: 25px;
- }
-
-.Data{
-    font-family: sans-serif;
-    font-size: 15px;
-
+  position: relative;
+  text-transform: uppercase;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 600;
+  color: #fff;
+  line-height: 130%;
+  background: #bda87f;
+  letter-spacing: 1.5px;
+  padding: 10px 15px;
+  margin-bottom: 20px;
 }
 
-.Pershkrimi{
-    font-family: sans-serif;
-    font-size: 20px;
-    color: slategray;
-    padding-bottom: 10px;
+.article-heading:after {
+  content: "";
+  position: absolute;
+  display: block;
+  border-bottom: 2px solid #bda87f;
+  width: 590px;
+  margin-left: -590px;
+  margin-top: -7px;
+  padding-top: 15px;
+}
+
+.article-title {
+  text-shadow: -1px -1px gray, -1px 1px white, 2px -1px white, -2px -2px white;
+  font-size: 3em;
+  padding: 30px 0;
+  font-family: Montserrat;
+  font-family: Montserrat;
+  font-weight: bold;
+}
+
+/* Dizajni per permbajtjen brenda, kurse dizajnin e vet box e kemi ba ne <head> */
+
+.Emri_box {
+  font-family: sans-serif;
+  font-size: 25px;
+}
+
+.Data {
+  font-family: sans-serif;
+  font-size: 15px;
+}
+
+.Pershkrimi {
+  font-family: sans-serif;
+  font-size: 20px;
+  color: slategray;
+  padding-bottom: 10px;
 }
 
 .butoni {
-    padding: 12px 17px;
-    font-size: 14px;
-    font-weight: 500;
-    color: #fff;
-    background: #2d2d2d;
-    border: none;
-    border-radius: 50px;
-
-  }
-  
-  .butoni:hover {
-    background: #bda87f;
-    color: #fff;
-  }
-  
-  .butoni:hover:after {
-    content: " →";
-  }
-
-.box:hover{
-    background-color: beige;
-    cursor: pointer;
-    transform: scale(1.03);
-    transition: all 0.5s ease ;
+  padding: 12px 17px;
+  font-size: 14px;
+  font-weight: 500;
+  color: #fff;
+  background: #2d2d2d;
+  border: none;
+  border-radius: 50px;
 }
 
-.box2:hover{
-    background-color: beige;
-    cursor: pointer;
-    transform: scale(1.03);
-    transition: all 0.5s ease ;
-
+.butoni:hover {
+  background: #bda87f;
+  color: #fff;
 }
 
+.butoni:hover:after {
+  content: " →";
+}
 
+.box:hover {
+  background-color: beige;
+  cursor: pointer;
+  transform: scale(1.03);
+  transition: all 0.5s ease;
+}
 
-
-
+.box2:hover {
+  background-color: beige;
+  cursor: pointer;
+  transform: scale(1.03);
+  transition: all 0.5s ease;
+}
 
 /*Pjesa e fundit, para footerit, "Great Clients" me foto levizese.*/
 
 .heading {
-            position: relative;
-            text-transform: uppercase;
-            display: inline-block;
-            font-size: 16px;
-            font-weight: 600;
-            color: #fff;
-            line-height: 130%;
-            background: #bda87f;
-            letter-spacing: 1.5px;
-            padding: 10px 15px;
-            margin-bottom: 20px;
-            margin-left: 150px;
-      }
-          
+  position: relative;
+  text-transform: uppercase;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 600;
+  color: #fff;
+  line-height: 130%;
+  background: #bda87f;
+  letter-spacing: 1.5px;
+  padding: 10px 15px;
+  margin-bottom: 20px;
+  margin-left: 150px;
+}
+
 .heading:after {
-            content: "";
-            position: absolute;
-            display: block;
-            border-bottom: 2px solid #bda87f;
-            width: 590px;
-            margin-left: -590px;
-            margin-top: -7px;
-            padding-top: 15px;
-        }
-        
-.article-titll{
-    
-            text-shadow: -1px -1px gray, -1px 1px white, 2px -1px white, -2px -2px white;
-            font-size: 3em;
-            padding: 30px 0;
-            font-family: Montserrat;
-            font-weight: bold;
-            margin-left: 150px;
-        }
+  content: "";
+  position: absolute;
+  display: block;
+  border-bottom: 2px solid #bda87f;
+  width: 590px;
+  margin-left: -590px;
+  margin-top: -7px;
+  padding-top: 15px;
+}
+
+.article-titll {
+  text-shadow: -1px -1px gray, -1px 1px white, 2px -1px white, -2px -2px white;
+  font-size: 3em;
+  padding: 30px 0;
+  font-family: Montserrat;
+  font-weight: bold;
+  margin-left: 150px;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer {
+  background-color: #1d1d1d;
+  color: white;
+}
+
+footer div h4:after {
+  content: "";
+  display: block;
+  width: 40%;
+  height: 1px;
+  background: #fff;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.footer-content div {
+  max-width: 25%;
+  padding: 40px 0;
+}
+
+.footer-content__main {
+  font-size: 14px;
+}
+
+.footer-content__main p {
+  padding: 20px 0 5px;
+}
+
+.footer-copyright {
+  font-size: 13px;
+  padding-top: 0;
+}
+
+.footer-site-map ul li,
+.footer-contact-us ul li,
+.footer-visit-us ul li,
+.footer-search ul li {
+  list-style-type: none;
+  padding: 5px 0;
+  margin: 0;
+}
+
+.footer-site-map ul li:first-child,
+.footer-contact-us ul li:first-child,
+.footer-visit-us ul li:first-child,
+.about__us-style__lists {
+  padding-top: 20px;
+}
+
+.footer-site-map ul li a,
+.footer-contact-us ul li a,
+.footer-search ul li a {
+  text-decoration: none;
+  color: white;
+}
+
+.search {
+  margin: 15px 0;
+}
+
+input[type="text"] {
+  padding: 10px 30px 10px 5px;
+  border: none;
+  outline: none;
+  color: white;
+  background-color: #2d2d2d;
+}
+
+input[type="text"]::placeholder {
+  color: white;
+}
+
+.nested-list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
