--- a/blog_post.css
+++ b/blog_post.css
@@ -1,90 +1,85 @@
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 /* Pjesa e headerit */
-      .wrapper {
-                max-width: 1200px;
-                margin: 0 auto;
-        }
-  
-      .header,
-      .navbar {
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-        }
-  
-       .header {
-                padding: 10px 0;
-        }
-  
-        .dropdown .dropdown__main a {
-                font-size: 14px;
-                text-decoration: none;
-                padding: 33px 20px;
-                color: black;
-                background-color: rgba(255, 255, 255, 0.5);
-        }
-  
-         .dropdown-content {
-                display: none;
-                position: absolute;
-                margin-top: 33px;
-                min-width: 160px;
-                background-color: rgba(255, 255, 255, 0.7);
-                box-shadow: 0px 3px 5px -1px #ccc;
-                z-index: 1;
-        }
-  
-        .dropdown-content a {
-                display: block;
-                padding: 12px 16px;
-                color: black;
-                text-decoration: none;
-                text-align: left;
-                font-size: 12px;
-        }
-  
-        .dropdown:hover .dropdown-content {
-                display: block;
-        }
-  
-        .dropdown__main a:hover,
-        .dropdown-content a:hover {
-                color: rgb(73, 62, 224);
-        }
-
-
-
-   /* Pjesa e prezantimit te faqes Blog Post      */
-
-  .nalt{
-	 text-align: center;
-         font-size: 50px;
-         height: 100px;
-         font-weight: normal;
-         text-shadow: -4px 20px 0px rgba(255,255,255,0.19);
-	 color: white;
-	 font-family: palatino;
-         display: flex;
-         align-items: center;
-         justify-content: center;
-
+.wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
 }
-.posht{
-	
-	 letter-spacing: 12px;
-         font-size: 17px;
-         color: white;
-	 vertical-align: text-top;
-	  text-align: center;
-	  height: 100px;
-	  font-family: garamond;
-	  font-weight: normal;
+
+.header,
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header {
+  padding: 10px 0;
+}
+
+.dropdown .dropdown__main a {
+  font-size: 14px;
+  text-decoration: none;
+  padding: 33px 20px;
+  color: black;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  margin-top: 33px;
+  min-width: 160px;
+  background-color: rgba(255, 255, 255, 0.7);
+  box-shadow: 0px 3px 5px -1px #ccc;
+  z-index: 1;
+}
+
+.dropdown-content a {
+  display: block;
+  padding: 12px 16px;
+  color: black;
+  text-decoration: none;
+  text-align: left;
+  font-size: 12px;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown__main a:hover,
+.dropdown-content a:hover {
+  color: rgb(73, 62, 224);
+}
+
+/* Pjesa e prezantimit te faqes Blog Post      */
+
+.nalt {
+  text-align: center;
+  font-size: 50px;
+  height: 100px;
+  font-weight: normal;
+  text-shadow: -4px 20px 0px rgba(255, 255, 255, 0.19);
+  color: white;
+  font-family: palatino;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.posht {
+  letter-spacing: 12px;
+  font-size: 17px;
+  color: white;
+  vertical-align: text-top;
+  text-align: center;
+  height: 100px;
+  font-family: garamond;
+  font-weight: normal;
 }
 
 /*Klasa center permban tabelen kryesore*/
@@ -94,180 +89,240 @@
   border: 1px solid lightgray;
 }
 
-
-
-.Fillimi_titulli{
-    font-family: sans-serif;
-    font-style: italic;
-    font-size: 33px;
-    letter-spacing: 1PX;
-    padding-bottom: 10px;
- }
-
-
-.font1{
-        font-size: 17px;
-        color: #808080;
-        font-family: sans-serif;
-        }
-.Pjesa-anash-titulli{
-    font-family :  sans-serif;
-    letter-spacing: 1px;
-    font-size: 20px;
-    padding: 15px;
+.Fillimi_titulli {
+  font-family: sans-serif;
+  font-style: italic;
+  font-size: 33px;
+  letter-spacing: 1px;
+  padding-bottom: 10px;
 }
 
-
-.Pershkrim_posti{
-    font-size: 20px;
-    color: #808080;
-    font-family: sans-serif;
-    text-decoration: none;
+.font1 {
+  font-size: 17px;
+  color: #808080;
+  font-family: sans-serif;
+}
+.Pjesa-anash-titulli {
+  font-family: sans-serif;
+  letter-spacing: 1px;
+  font-size: 20px;
+  padding: 15px;
 }
 
-.Pershkrim_posti:hover{
-    color: #bda87f;
+.Pershkrim_posti {
+  font-size: 20px;
+  color: #808080;
+  font-family: sans-serif;
+  text-decoration: none;
 }
 
-ul.blog_post_lista{
-    list-style-type: circle;
-    padding-left: 20px;
- }
-
-li{
-    margin: 12px;
-    font-family: sans-serif;
-    color: black;
-    font-size: 17px;
-        }
-li:hover{
-       transform: translateX(15px);
-       color:#bda87f ;
+.Pershkrim_posti:hover {
+  color: #bda87f;
 }
 
+ul.blog_post_lista {
+  list-style-type: circle;
+  padding-left: 20px;
+}
 
-
-
+li {
+  margin: 12px;
+  font-family: sans-serif;
+  color: black;
+  font-size: 17px;
+}
+li:hover {
+  transform: translateX(15px);
+  color: #bda87f;
+}
 
 .butoni {
-
-   padding: 7px  17px;
-    margin: 5px;
-    font-size: 13px;
-    font-weight: bold;
-    color: #6f6f6f;
-    background: #e7e7e7;
-    border: none;
-    border-radius: 50px;
-    font-family: Montserrat;
-
-  }
-  
- .butoni:hover {
-    background: #bda87f;
-    color: #fff;
-    transition-duration: 0.3s;
-  }
-
-.comment-box{
-    top: 50%;
-   /* left: 50%;*/
-    position: relative;
-    float: left;
+  padding: 7px 17px;
+  margin: 5px;
+  font-size: 13px;
+  font-weight: bold;
+  color: #6f6f6f;
+  background: #e7e7e7;
+  border: none;
+  border-radius: 50px;
+  font-family: Montserrat;
 }
 
-.comment-box h2{
-    font-size: 23px;
-    font-family: montserrat;
-    margin-bottom: 15px;
-  }
-
-.comment-box input{
-    width: 100%;
-    height: 50px ;
-    padding: 0 20px;
-    margin-bottom: 15px ;
-    border-radius: 5px;
-    border: 1px solid #86b0b6;
-
+.butoni:hover {
+  background: #bda87f;
+  color: #fff;
+  transition-duration: 0.3s;
 }
 
-.comment-box textarea{
-    width: 100%;
-    height: 150px;
-    padding: 15px 20px;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    border: 2px solid  #86b0b6;
+.comment-box {
+  top: 50%;
+  /* left: 50%;*/
+  position: relative;
+  float: left;
 }
 
-.comment-box textarea{
-    border: 1px solid #000;
-    border-style: dashed;
-    outline: 0;
+.comment-box h2 {
+  font-size: 23px;
+  font-family: montserrat;
+  margin-bottom: 15px;
 }
 
+.comment-box input {
+  width: 100%;
+  height: 50px;
+  padding: 0 20px;
+  margin-bottom: 15px;
+  border-radius: 5px;
+  border: 1px solid #86b0b6;
+}
+
+.comment-box textarea {
+  width: 100%;
+  height: 150px;
+  padding: 15px 20px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  border: 2px solid #86b0b6;
+}
+
+.comment-box textarea {
+  border: 1px solid #000;
+  border-style: dashed;
+  outline: 0;
+}
 
 .butoni {
-    padding: 12px 17px;
-    font-family: sans-serif;
-    font-size: 14px;
-    font-weight: 500;
-    color: #fff;
-    background: #bda87f;
-    border: none;
-    border-radius: 10px;
+  padding: 12px 17px;
+  font-family: sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  color: #fff;
+  background: #bda87f;
+  border: none;
+  border-radius: 10px;
+}
 
-  }
-  
-  .butoni:hover {
-    background: #000;
-    color: #fff;
-  }
-  
-
-
+.butoni:hover {
+  background: #000;
+  color: #fff;
+}
 
 .heading {
-            position: relative;
-            text-transform: uppercase;
-            display: inline-block;
-            font-size: 16px;
-            font-weight: 600;
-            color: #fff;
-            line-height: 130%;
-            background: #bda87f;
-            letter-spacing: 1.5px;
-            padding: 10px 15px;
-            margin-bottom: 20px;
-           /* margin-left: 150px;*/
-      
-        }
-          
-              
+  position: relative;
+  text-transform: uppercase;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 600;
+  color: #fff;
+  line-height: 130%;
+  background: #bda87f;
+  letter-spacing: 1.5px;
+  padding: 10px 15px;
+  margin-bottom: 20px;
+  /* margin-left: 150px;*/
+}
+
 .heading:after {
-            content: "";
-            position: absolute;
-            display: block;
-            border-bottom: 2px solid #bda87f;
-            width: 590px;
-            margin-left: -590px;
-            margin-top: -7px;
-            padding-top: 15px;
-        }
-        
-        
-.article-titll{
-    
-            text-shadow: -1px -1px gray, -1px 1px white, 2px -1px white, -2px -2px white;
-            color: #000;
-            font-size: 3em;
-            padding: 30px 0;
-            font-family: Montserrat;
-            font-weight: bold;
-            margin-left: 150px;
+  content: "";
+  position: absolute;
+  display: block;
+  border-bottom: 2px solid #bda87f;
+  width: 590px;
+  margin-left: -590px;
+  margin-top: -7px;
+  padding-top: 15px;
+}
 
-           
-            }
+.article-titll {
+  text-shadow: -1px -1px gray, -1px 1px white, 2px -1px white, -2px -2px white;
+  color: #000;
+  font-size: 3em;
+  padding: 30px 0;
+  font-family: Montserrat;
+  font-weight: bold;
+  margin-left: 150px;
+}
 
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+}
 
+.footer {
+  background-color: #1d1d1d;
+  color: white;
+}
+
+footer div h4:after {
+  content: "";
+  display: block;
+  width: 40%;
+  height: 1px;
+  background: #fff;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.footer-content div {
+  max-width: 25%;
+  padding: 40px 0;
+}
+
+.footer-content__main {
+  font-size: 14px;
+}
+
+.footer-content__main p {
+  padding: 20px 0 5px;
+}
+
+.footer-copyright {
+  font-size: 13px;
+  padding-top: 0;
+}
+
+.footer-site-map ul li,
+.footer-contact-us ul li,
+.footer-visit-us ul li,
+.footer-search ul li {
+  list-style-type: none;
+  padding: 5px 0;
+}
+
+.footer-site-map ul li:first-child,
+.footer-contact-us ul li:first-child,
+.footer-visit-us ul li:first-child,
+.about__us-style__lists {
+  padding-top: 20px;
+  padding: 5px 0;
+  margin: 0;
+}
+
+.footer-site-map ul li a,
+.footer-contact-us ul li a,
+.footer-search ul li a {
+  text-decoration: none;
+  color: white;
+}
+
+.search {
+  margin: 15px 0;
+}
+
+input[type="text"] {
+  padding: 10px 30px 10px 5px;
+  border: none;
+  outline: none;
+  color: white;
+  background-color: #2d2d2d;
+}
+
+input[type="text"]::placeholder {
+  color: white;
+}
+
+.nested-list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
